Upgrade Video API
1 - The reader do not perform any transform any more.
2 - A wrapper class Video apply video transformations and more
3 - Video supports slicing, indexing and iterating (<=> Sequence[array])
4 - Renamed Detections.frame into Detections.frame_id

--- a/examples/ByoTrack fundamental.ipynb
+++ b/examples/ByoTrack fundamental.ipynb
@@ -26,8 +26,7 @@
     "import matplotlib.pyplot as plt\n",
     "import cv2\n",
     "\n",
-    "from byotrack.video.reader import VideoReader\n",
-    "from byotrack.video.transforms import VideoTransformConfig"
+    "from byotrack.video.video import Video, VideoTransformConfig"
    ]
   },
   {
@@ -38,7 +37,12 @@
    "outputs": [],
    "source": [
     "# Simply open a video\n",
-    "video = VideoReader.open(\"path/to/video\")"
+    "video = Video(\"path/to/video\")\n",
+    "\n",
+    "fps = 20\n",
+    "# fps = video.reader.fps\n",
+    "\n",
+    "# Note: video could also be a 4 dimensionnal numpy array"
    ]
   },
   {
@@ -50,11 +54,11 @@
    "source": [
     "# A transform can be added to normalize and aggregate channels\n",
     "\n",
-    "transform_config = VideoTransformConfig(normalize=True, q_min=0.01, q_max=0.999)\n",
+    "transform_config = VideoTransformConfig(aggregate=True, normalize=True, q_min=0.01, q_max=0.999)\n",
     "video.set_transform(transform_config)\n",
     "\n",
     "# Show the min max value used to clip and normalize\n",
-    "print(video.transform.normalizer.mini, video.transform.normalizer.maxi)"
+    "print(video._normalizer.mini, video._normalizer.maxi)"
    ]
   },
   {
@@ -67,7 +71,7 @@
     "# Display the first frame\n",
     "\n",
     "plt.figure(figsize=(24, 16), dpi=100)\n",
-    "plt.imshow(video.retrieve())\n",
+    "plt.imshow(video[0])\n",
     "plt.show()"
    ]
   },
@@ -80,16 +84,13 @@
    "source": [
     "# Visualisation of the whole video with opencv\n",
     "\n",
-    "has_next = True\n",
-    "while has_next:\n",
-    "    frame, has_next = video.read()\n",
-    "\n",
+    "for i, frame in enumerate(video):\n",
     "    # Display the resulting frame\n",
     "    cv2.imshow('Frame', frame)\n",
-    "    cv2.setWindowTitle('Frame', f'Frame {video.frame_id} / {video.length}')\n",
+    "    cv2.setWindowTitle('Frame', f'Frame {i} / {len(video)}')\n",
     "\n",
     "    # Press Q on keyboard to  exit\n",
-    "    key = cv2.waitKey(video.fps if video.fps != -1 else 20) & 0xFF\n",
+    "    key = cv2.waitKey(1000 // fps) & 0xFF\n",
     "\n",
     "    if key == ord('q'):\n",
     "        break\n",
@@ -144,7 +145,11 @@
    "source": [
     "# Run the detection process on the current video\n",
     "\n",
-    "detections_sequence = detector.run(video)"
+    "detections_sequence = detector.run(video)\n",
+    "\n",
+    "# To run a quick test, run the detection on a subvideo using slicing\n",
+    "\n",
+    "# detections_sequence = detector.run(video[20:50])"
    ]
   },
   {
@@ -166,7 +171,7 @@
     "    cv2.setWindowTitle('Frame', f'Frame {i} / {len(detections_sequence)} - Number of detections: {detections_sequence[i].length}')\n",
     "\n",
     "    # Press Q on keyboard to  exit\n",
-    "    key = cv2.waitKey(video.fps if video.fps != -1 else 20) & 0xFF\n",
+    "    key = cv2.waitKey() & 0xFF\n",
     "\n",
     "    if key == ord('q'):\n",
     "        break\n",
@@ -198,18 +203,16 @@
     "K_SPEED = 0.01\n",
     "\n",
     "i = 0\n",
-    "video.seek(i)\n",
-    "frame = video.retrieve()\n",
-    "\n",
     "detector = SpotDetector(scale=1, k = 3.0, min_area=5.0, device=torch.device(\"cpu\"))\n",
     "\n",
     "while True:\n",
+    "    frame = video[i]\n",
     "    detections = detector.detect(frame[None, ...])[0]\n",
     "    mask = (detections.segmentation.numpy() != 0).astype(np.uint8) * 255\n",
     "\n",
     "    # Display the resulting frame\n",
     "    cv2.imshow('Frame', mask)\n",
-    "    cv2.setWindowTitle('Frame', f'Frame {i} / {video.length} - k={detector.k} - Num detections: {detections.length}')\n",
+    "    cv2.setWindowTitle('Frame', f'Frame {i} / {len(video)} - k={detector.k} - Num detections: {detections.length}')\n",
     "\n",
     "    # Press Q on keyboard to  exit\n",
     "    key = cv2.waitKey() & 0xFF\n",
@@ -221,14 +224,10 @@
     "        break\n",
     "        \n",
     "    if key == ord(\"w\"):\n",
-    "        i = (i - 1) % video.length\n",
-    "        video.seek(i)\n",
-    "        frame = video.retrieve()\n",
+    "        i = (i - 1) % len(video)\n",
     "\n",
     "    if key == ord(\"x\"):\n",
-    "        i = (i + 1) % video.length\n",
-    "        video.seek(i)\n",
-    "        frame = video.retrieve()\n",
+    "        i = (i + 1) % len(video)\n",
     "        \n",
     "    if key == ord(\"c\"):\n",
     "        detector.k = detector.k * (1 - K_SPEED)\n",
@@ -291,7 +290,7 @@
    "source": [
     "# Run the linker given a video (Unused) and detections\n",
     "\n",
-    "tracks = linker.run(None, detections_sequence[:50])"
+    "tracks = linker.run(video, detections_sequence)"
    ]
   },
   {
@@ -329,21 +328,20 @@
     "fps = 20\n",
     "running = False\n",
     "\n",
-    "video.seek(0)\n",
-    "true_frame = video.retrieve()\n",
+    "frame_id = 0\n",
     "\n",
     "while True:\n",
-    "    if running:\n",
-    "        true_frame, has_next = video.read()\n",
-    "\n",
-    "    frame = true_frame.copy()\n",
+    "    frame_id += running\n",
+    "    frame = video[frame_id]\n",
+    "    if frame.shape[2] == 1:  # Switch to BGR\n",
+    "        frame = np.concatenate((frame, frame, frame), axis=2)\n",
     "\n",
     "    # Add tracklets\n",
     "    for track in tracks:\n",
-    "        point = track[video.frame_id]\n",
+    "        point = track[frame_id]\n",
     "        if torch.isnan(point).any():\n",
     "            continue\n",
-    "            \n",
+    "\n",
     "        x, y = point.round().to(torch.int).tolist()\n",
     "\n",
     "        color = (0, 0, 255)  # Red\n",
@@ -353,10 +351,10 @@
     "\n",
     "    # Display the resulting frame\n",
     "    cv2.imshow('Frame', frame)\n",
-    "    cv2.setWindowTitle('Frame', f'Frame {video.frame_id} / {video.length}')\n",
+    "    cv2.setWindowTitle('Frame', f'Frame {frame_id} / {len(video)}')\n",
     "\n",
     "    # Press Q on keyboard to  exit\n",
-    "    key = cv2.waitKey(int(1/fps * 1000)) & 0xFF\n",
+    "    key = cv2.waitKey(1000 // fps) & 0xFF\n",
     "\n",
     "    if key == ord('q'):\n",
     "        break\n",
@@ -368,15 +366,10 @@
     "        running = not running\n",
     "\n",
     "    if not running and key == ord(\"w\"):  # Prev\n",
-    "        try:\n",
-    "            video.seek(video.frame_id - 4)\n",
-    "        except:\n",
-    "            pass\n",
-    "\n",
-    "        true_frame = video.retrieve()\n",
+    "        frame_id = (frame_id - 1) % len(video)\n",
     "\n",
     "    if not running and key == ord(\"x\"):  # Next\n",
-    "        true_frame, has_next = video.read()\n",
+    "        frame_id = (frame_id + 1) % len(video)\n",
     "\n",
     "# Closes all the frames\n",
     "cv2.destroyAllWindows()"
@@ -412,6 +405,7 @@
     "\n",
     "detector = SpotDetector(scale=1, k = 3.0, min_area=5, batch_size=50, device=torch.device(\"cpu\"))\n",
     "linker = IcyEMHTLinker(\"path/to/icy/dir\")\n",
+    "# refiner = \n",
     "\n",
     "tracker = MultiStepTracker(detector, linker)"
    ]
@@ -461,21 +455,20 @@
     "fps = 20\n",
     "running = False\n",
     "\n",
-    "video.seek(0)\n",
-    "true_frame = video.retrieve()\n",
+    "frame_id = 0\n",
     "\n",
     "while True:\n",
-    "    if running:\n",
-    "        true_frame, has_next = video.read()\n",
-    "\n",
-    "    frame = true_frame.copy()\n",
+    "    frame_id += running\n",
+    "    frame = video[frame_id]\n",
+    "    if frame.shape[2] == 1:  # Switch to BGR\n",
+    "        frame = np.concatenate((frame, frame, frame), axis=2)\n",
     "\n",
     "    # Add tracklets\n",
     "    for track in tracks:\n",
-    "        point = track[video.frame_id]\n",
+    "        point = track[frame_id]\n",
     "        if torch.isnan(point).any():\n",
     "            continue\n",
-    "            \n",
+    "\n",
     "        x, y = point.round().to(torch.int).tolist()\n",
     "\n",
     "        color = (0, 0, 255)  # Red\n",
@@ -485,10 +478,10 @@
     "\n",
     "    # Display the resulting frame\n",
     "    cv2.imshow('Frame', frame)\n",
-    "    cv2.setWindowTitle('Frame', f'Frame {video.frame_id} / {video.length}')\n",
+    "    cv2.setWindowTitle('Frame', f'Frame {frame_id} / {len(video)}')\n",
     "\n",
     "    # Press Q on keyboard to  exit\n",
-    "    key = cv2.waitKey(int(1/fps * 1000)) & 0xFF\n",
+    "    key = cv2.waitKey(1000 // fps) & 0xFF\n",
     "\n",
     "    if key == ord('q'):\n",
     "        break\n",
@@ -500,15 +493,10 @@
     "        running = not running\n",
     "\n",
     "    if not running and key == ord(\"w\"):  # Prev\n",
-    "        try:\n",
-    "            video.seek(video.frame_id - 4)\n",
-    "        except:\n",
-    "            pass\n",
-    "\n",
-    "        true_frame = video.retrieve()\n",
+    "        frame_id = (frame_id - 1) % len(video)\n",
     "\n",
     "    if not running and key == ord(\"x\"):  # Next\n",
-    "        true_frame, has_next = video.read()\n",
+    "        frame_id = (frame_id + 1) % len(video)\n",
     "\n",
     "# Closes all the frames\n",
     "cv2.destroyAllWindows()"
