Add TEST mode to the example notebook

--- a/examples/ByoTrack fundamental.ipynb
+++ b/examples/ByoTrack fundamental.ipynb
@@ -26,7 +26,12 @@
     "import matplotlib.pyplot as plt\n",
     "import cv2\n",
     "\n",
-    "from byotrack.video.video import Video, VideoTransformConfig"
+    "from byotrack.video.video import Video, VideoTransformConfig\n",
+    "\n",
+    "TEST = True  # Set to False to analyze a whole video\n",
+    "\n",
+    "video_path = \"path/to/video.ext\"\n",
+    "icy_path = \"path/to/icy_dir/\""
    ]
   },
   {
@@ -37,7 +42,7 @@
    "outputs": [],
    "source": [
     "# Simply open a video\n",
-    "video = Video(\"path/to/video\")\n",
+    "video = Video(video_path)\n",
     "\n",
     "fps = 20\n",
     "# fps = video.reader.fps\n",
@@ -145,11 +150,10 @@
    "source": [
     "# Run the detection process on the current video\n",
     "\n",
-    "detections_sequence = detector.run(video)\n",
-    "\n",
-    "# To run a quick test, run the detection on a subvideo using slicing\n",
-    "\n",
-    "# detections_sequence = detector.run(video[20:50])"
+    "if TEST:  # Use slicing on video to run detection only on a part of it\n",
+    "    detections_sequence = detector.run(video[:20])\n",
+    "else:\n",
+    "    detections_sequence = detector.run(video)"
    ]
   },
   {
@@ -266,7 +270,7 @@
    "outputs": [],
    "source": [
     "# Create the linker object with icy path\n",
-    "linker = IcyEMHTLinker(\"path/to/icy/dir/\")"
+    "linker = IcyEMHTLinker(icy_path)"
    ]
   },
   {
@@ -290,7 +294,10 @@
    "source": [
     "# Run the linker given a video (Unused) and detections\n",
     "\n",
-    "tracks = linker.run(video, detections_sequence)"
+    "if TEST:  # Use slicing to run linker only on a part of the data\n",
+    "    tracks = linker.run(video[:20], detections_sequence[:20])\n",
+    "else:\n",
+    "    tracks = linker.run(video, detections_sequence)"
    ]
   },
   {
@@ -404,7 +411,7 @@
     "# Then the tracker\n",
     "\n",
     "detector = SpotDetector(scale=1, k = 3.0, min_area=5, batch_size=50, device=torch.device(\"cpu\"))\n",
-    "linker = IcyEMHTLinker(\"path/to/icy/dir\")\n",
+    "linker = IcyEMHTLinker(icy_path)\n",
     "# refiner = \n",
     "\n",
     "tracker = MultiStepTracker(detector, linker)"
@@ -417,7 +424,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tracks = tracker.run(video)"
+    "if TEST:  # Use slicing on video to run tracker only on a part of it\n",
+    "    tracks = tracker.run(video[:20])\n",
+    "else:\n",
+    "    tracks = tracker.run(video)"
    ]
   },
   {
