Documentation with ReadTheDocs

--- a/examples/ByoTrack fundamental.ipynb
+++ b/examples/ByoTrack fundamental.ipynb
@@ -159,6 +159,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ba50d578",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display the first detections\n",
+    "\n",
+    "segmentation = detections_sequence[0].segmentation.clone()\n",
+    "segmentation[segmentation!=0] += 50  # Improve visibility of firsts labels\n",
+    "\n",
+    "plt.figure(figsize=(24, 16), dpi=100)\n",
+    "plt.imshow(segmentation)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9cf3c088",
    "metadata": {},
    "outputs": [],
@@ -270,6 +287,8 @@
    "outputs": [],
    "source": [
     "# Create the linker object with icy path\n",
+    "# This Linker requires to install Icy software first\n",
+    "\n",
     "linker = IcyEMHTLinker(icy_path)"
    ]
   },
