Add a simple Cleaner Refiner

--- a/examples/ByoTrack fundamental.ipynb
+++ b/examples/ByoTrack fundamental.ipynb
@@ -5,7 +5,7 @@
    "id": "fb91ceb4",
    "metadata": {},
    "source": [
-    "# ByoTrack"
+    "# ByoTrack fundamental features"
    ]
   },
   {
@@ -403,6 +403,71 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d87805b9",
+   "metadata": {},
+   "source": [
+    "## Tracks refinement: Example of Cleaner "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55757b5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from byotrack.refiner.cleaner import Cleaner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fb6b78c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split tracks with consecutive dist > 3.5\n",
+    "# Drop tracks with length < 5\n",
+    "\n",
+    "cleaner = Cleaner(min_length=5, max_dist=3.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c7eec8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run the refiner\n",
+    "\n",
+    "tracks = cleaner.run(video, tracks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfdf42f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize tracks existence in time\n",
+    "\n",
+    "# Transform into tensor\n",
+    "tracks_tensor = Track.tensorize(tracks)\n",
+    "print(tracks_tensor.shape)  # N_frame x N_track x D\n",
+    "\n",
+    "mask = ~ torch.isnan(tracks_tensor).any(dim=2)\n",
+    "\n",
+    "plt.figure(figsize=(24, 16), dpi=100)\n",
+    "plt.xlabel(\"Track id\")\n",
+    "plt.ylabel(\"Frame\")\n",
+    "plt.imshow(mask)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fd59009a",
    "metadata": {},
    "source": [
@@ -431,9 +496,13 @@
     "\n",
     "detector = SpotDetector(scale=1, k = 3.0, min_area=5, batch_size=50, device=torch.device(\"cpu\"))\n",
     "linker = IcyEMHTLinker(icy_path)\n",
-    "# refiner = \n",
     "\n",
-    "tracker = MultiStepTracker(detector, linker)"
+    "# Optional refiner\n",
+    "refiner = None\n",
+    "if True:\n",
+    "    refiner = Cleaner(5, 3.5)\n",
+    "\n",
+    "tracker = MultiStepTracker(detector, linker, cleaner)"
    ]
   },
   {
