Add EMC2 stitching

--- a/examples/ByoTrack fundamental.ipynb
+++ b/examples/ByoTrack fundamental.ipynb
@@ -406,7 +406,7 @@
    "id": "d87805b9",
    "metadata": {},
    "source": [
-    "## Tracks refinement: Example of Cleaner "
+    "## Tracks refinement: Example of Cleaner, followed by EMC2 Stitcher"
    ]
   },
   {
@@ -416,7 +416,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from byotrack.refiner.cleaner import Cleaner"
+    "from byotrack.refiner.cleaner import Cleaner\n",
+    "from byotrack.refiner.stitching.emc2 import EMC2Stitcher"
    ]
   },
   {
@@ -429,18 +430,7 @@
     "# Split tracks with consecutive dist > 3.5\n",
     "# Drop tracks with length < 5\n",
     "\n",
-    "cleaner = Cleaner(min_length=5, max_dist=3.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c7eec8b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Run the refiner\n",
-    "\n",
+    "cleaner = Cleaner(min_length=5, max_dist=3.5)\n",
     "tracks = cleaner.run(video, tracks)"
    ]
   },
@@ -448,6 +438,41 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dfdf42f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize tracks existence in time\n",
+    "\n",
+    "# Transform into tensor\n",
+    "tracks_tensor = Track.tensorize(tracks)\n",
+    "print(tracks_tensor.shape)  # N_frame x N_track x D\n",
+    "\n",
+    "mask = ~ torch.isnan(tracks_tensor).any(dim=2)\n",
+    "\n",
+    "plt.figure(figsize=(24, 16), dpi=100)\n",
+    "plt.xlabel(\"Track id\")\n",
+    "plt.ylabel(\"Frame\")\n",
+    "plt.imshow(mask)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15b3be30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Stitch tracks together in order to produce coherent track on all the video\n",
+    "\n",
+    "stitcher = EMC2Stitcher(eta=5)  # Don't link tracks if they are too far (EMC dist > 5 (pixels))\n",
+    "tracks = stitcher.run(video, tracks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10c37ef8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +506,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from byotrack.tracker import MultiStepTracker"
+    "from byotrack.tracker import MultiStepTracker\n",
+    "from byotrack.refiner.base import MultiRefiner"
    ]
   },
   {
@@ -500,7 +526,7 @@
     "# Optional refiner\n",
     "refiner = None\n",
     "if True:\n",
-    "    refiner = Cleaner(5, 3.5)\n",
+    "    refiner = MultiRefiner([Cleaner(5, 3.5), EMC2Stitcher(eta=5.0)])\n",
     "\n",
     "tracker = MultiStepTracker(detector, linker, cleaner)"
    ]
