Update documentation and notebooks

--- a/examples/ByoTrack fundamental.ipynb
+++ b/examples/ByoTrack fundamental.ipynb
@@ -26,7 +26,7 @@
     "import matplotlib.pyplot as plt\n",
     "import cv2\n",
     "\n",
-    "from byotrack.video.video import Video, VideoTransformConfig\n",
+    "from byotrack import Video, VideoTransformConfig\n",
     "\n",
     "TEST = True  # Set to False to analyze a whole video\n",
     "\n",
@@ -126,7 +126,7 @@
     "import numpy as np\n",
     "import torch\n",
     "\n",
-    "from byotrack.detector.spot_detector import SpotDetector"
+    "from byotrack.implementation.detector.spot_detector import SpotDetector"
    ]
   },
   {
@@ -151,7 +151,7 @@
     "# Run the detection process on the current video\n",
     "\n",
     "if TEST:  # Use slicing on video to run detection only on a part of it\n",
-    "    detections_sequence = detector.run(video[:20])\n",
+    "    detections_sequence = detector.run(video[:50])\n",
     "else:\n",
     "    detections_sequence = detector.run(video)"
    ]
@@ -276,7 +276,7 @@
    "outputs": [],
    "source": [
     "from byotrack import Track\n",
-    "from byotrack.linker.icy_emht.icy_emht import IcyEMHTLinker"
+    "from byotrack.implementation.linker.icy_emht import IcyEMHTLinker"
    ]
   },
   {
@@ -314,7 +314,7 @@
     "# Run the linker given a video (Unused) and detections\n",
     "\n",
     "if TEST:  # Use slicing to run linker only on a part of the data\n",
-    "    tracks = linker.run(video[:20], detections_sequence[:20])\n",
+    "    tracks = linker.run(video, detections_sequence[:50])\n",
     "else:\n",
     "    tracks = linker.run(video, detections_sequence)"
    ]
@@ -416,8 +416,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from byotrack.refiner.cleaner import Cleaner\n",
-    "from byotrack.refiner.stitching.emc2 import EMC2Stitcher"
+    "from byotrack.implementation.refiner.cleaner import Cleaner\n",
+    "from byotrack.implementation.refiner.stitching import EMC2Stitcher"
    ]
   },
   {
@@ -465,7 +465,7 @@
    "source": [
     "# Stitch tracks together in order to produce coherent track on all the video\n",
     "\n",
-    "stitcher = EMC2Stitcher(eta=5)  # Don't link tracks if they are too far (EMC dist > 5 (pixels))\n",
+    "stitcher = EMC2Stitcher(eta=5.0)  # Don't link tracks if they are too far (EMC dist > 5 (pixels))\n",
     "tracks = stitcher.run(video, tracks)"
    ]
   },
@@ -506,8 +506,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from byotrack.tracker import MultiStepTracker\n",
-    "from byotrack.refiner.base import MultiRefiner"
+    "from byotrack import MultiStepTracker"
    ]
   },
   {
@@ -524,11 +523,11 @@
     "linker = IcyEMHTLinker(icy_path)\n",
     "\n",
     "# Optional refiner\n",
-    "refiner = None\n",
+    "refiners = []\n",
     "if True:\n",
-    "    refiner = MultiRefiner([Cleaner(5, 3.5), EMC2Stitcher(eta=5.0)])\n",
+    "    refiners = [Cleaner(5, 3.5), EMC2Stitcher(eta=5.0)]\n",
     "\n",
-    "tracker = MultiStepTracker(detector, linker, cleaner)"
+    "tracker = MultiStepTracker(detector, linker, refiners)"
    ]
   },
   {
@@ -539,7 +538,7 @@
    "outputs": [],
    "source": [
     "if TEST:  # Use slicing on video to run tracker only on a part of it\n",
-    "    tracks = tracker.run(video[:20])\n",
+    "    tracks = tracker.run(video[:50])\n",
     "else:\n",
     "    tracks = tracker.run(video)"
    ]
