Upgrade visualization of tracks with visualization of detections in example notebook

--- a/examples/ByoTrack fundamental.ipynb
+++ b/examples/ByoTrack fundamental.ipynb
@@ -138,7 +138,7 @@
    "source": [
     "# Create the detector object with its hyper parameters\n",
     "\n",
-    "detector = SpotDetector(scale=1, k = 3.0, min_area=5, batch_size=50, device=torch.device(\"cpu\"))"
+    "detector = SpotDetector(scale=1, k=3.0, min_area=3, batch_size=20, device=torch.device(\"cpu\"))"
    ]
   },
   {
@@ -224,7 +224,7 @@
     "K_SPEED = 0.01\n",
     "\n",
     "i = 0\n",
-    "detector = SpotDetector(scale=1, k = 3.0, min_area=5.0, device=torch.device(\"cpu\"))\n",
+    "detector = SpotDetector(scale=1, k=3.0, min_area=3.0, device=torch.device(\"cpu\"))\n",
     "\n",
     "while True:\n",
     "    frame = video[i]\n",
@@ -350,17 +350,22 @@
    "source": [
     "# Visualize tracks with opencv\n",
     "# Use w/x to move backward/forward in the video (or space to run the video)\n",
+    "# Use c to display also the detections on the frame\n",
     "\n",
     "fps = 20\n",
     "running = False\n",
+    "display_detections = False\n",
     "\n",
     "frame_id = 0\n",
     "\n",
     "while True:\n",
     "    frame_id += running\n",
-    "    frame = video[frame_id]\n",
-    "    if frame.shape[2] == 1:  # Switch to BGR\n",
-    "        frame = np.concatenate((frame, frame, frame), axis=2)\n",
+    "    frame = (video[frame_id] * 255).astype(np.uint8)\n",
+    "    if display_detections and frame_id < len(detections_sequence):\n",
+    "        mask = (detections_sequence[frame_id].segmentation.numpy() != 0).astype(np.uint8) * 255\n",
+    "        frame = np.concatenate((mask[..., None], frame, np.zeros_like(frame)), axis=2)\n",
+    "    else:\n",
+    "        frame = np.concatenate((np.zeros_like(frame), frame, np.zeros_like(frame)), axis=2)\n",
     "\n",
     "    # Add tracklets\n",
     "    for track in tracks:\n",
@@ -396,6 +401,9 @@
     "\n",
     "    if not running and key == ord(\"x\"):  # Next\n",
     "        frame_id = (frame_id + 1) % len(video)\n",
+    "        \n",
+    "    if key == ord(\"c\"):\n",
+    "        display_detections = 1 - display_detections\n",
     "\n",
     "# Closes all the frames\n",
     "cv2.destroyAllWindows()"
@@ -519,7 +527,7 @@
     "# Create all the steps: Detector, Linker[, Refiner]\n",
     "# Then the tracker\n",
     "\n",
-    "detector = SpotDetector(scale=1, k = 3.0, min_area=5, batch_size=50, device=torch.device(\"cpu\"))\n",
+    "detector = SpotDetector(scale=1, k=3, min_area=3.0, batch_size=20, device=torch.device(\"cpu\"))\n",
     "linker = IcyEMHTLinker(icy_path)\n",
     "\n",
     "# Optional refiner\n",
@@ -574,17 +582,22 @@
    "source": [
     "# Visualize tracks with opencv\n",
     "# Use w/x to move backward/forward in the video (or space to run the video)\n",
+    "# Use c to display also the detections on the frame\n",
     "\n",
     "fps = 20\n",
     "running = False\n",
+    "display_detections = False\n",
     "\n",
     "frame_id = 0\n",
     "\n",
     "while True:\n",
     "    frame_id += running\n",
-    "    frame = video[frame_id]\n",
-    "    if frame.shape[2] == 1:  # Switch to BGR\n",
-    "        frame = np.concatenate((frame, frame, frame), axis=2)\n",
+    "    frame = (video[frame_id] * 255).astype(np.uint8)\n",
+    "    if display_detections and frame_id < len(detections_sequence):\n",
+    "        mask = (detections_sequence[frame_id].segmentation.numpy() != 0).astype(np.uint8) * 255\n",
+    "        frame = np.concatenate((mask[..., None], frame, np.zeros_like(frame)), axis=2)\n",
+    "    else:\n",
+    "        frame = np.concatenate((np.zeros_like(frame), frame, np.zeros_like(frame)), axis=2)\n",
     "\n",
     "    # Add tracklets\n",
     "    for track in tracks:\n",
@@ -620,6 +633,9 @@
     "\n",
     "    if not running and key == ord(\"x\"):  # Next\n",
     "        frame_id = (frame_id + 1) % len(video)\n",
+    "        \n",
+    "    if key == ord(\"c\"):\n",
+    "        display_detections = 1 - display_detections\n",
     "\n",
     "# Closes all the frames\n",
     "cv2.destroyAllWindows()"
