Rename SpotDetector into WaveletDetector (the name was too vague)

--- a/docs/source/run_examples/ByoTrack fundamental.ipynb
+++ b/docs/source/run_examples/ByoTrack fundamental.ipynb
@@ -132,7 +132,7 @@
    "id": "ea5f1cb4",
    "metadata": {},
    "source": [
-    "## Detections on a video: Example of SpotDetector"
+    "## Detections on a video: Example of WaveletDetector"
    ]
   },
   {
@@ -145,7 +145,7 @@
     "import numpy as np\n",
     "import torch\n",
     "\n",
-    "from byotrack.implementation.detector.spot_detector import SpotDetector"
+    "from byotrack.implementation.detector.wavelet import WaveletDetector"
    ]
   },
   {
@@ -157,7 +157,7 @@
    "source": [
     "# Create the detector object with its hyper parameters\n",
     "\n",
-    "detector = SpotDetector(scale=1, k=3.0, min_area=3, batch_size=20, device=torch.device(\"cpu\"))"
+    "detector = WaveletDetector(scale=1, k=3.0, min_area=3, batch_size=20, device=torch.device(\"cpu\"))"
    ]
   },
   {
@@ -170,7 +170,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Spot Detector: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [00:00<00:00, 78.62it/s]\n"
+      "Detections (Wavelet): 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [00:00<00:00, 89.26it/s]\n"
      ]
     }
    ],
@@ -224,7 +224,7 @@
     "i = 0\n",
     "while True:\n",
     "    mask = (detections_sequence[i].segmentation.numpy() != 0).astype(np.uint8) * 255\n",
-    "    \n",
+    "\n",
     "    # Display the resulting frame\n",
     "    cv2.imshow('Frame', mask)\n",
     "    cv2.setWindowTitle('Frame', f'Frame {i} / {len(detections_sequence)} - Number of detections: {detections_sequence[i].length}')\n",
@@ -237,7 +237,7 @@
     "\n",
     "    if cv2.getWindowProperty(\"Frame\", cv2.WND_PROP_VISIBLE) <1:\n",
     "        break\n",
-    "        \n",
+    "\n",
     "    if key == ord(\"w\"):\n",
     "        i = (i - 1) % len(detections_sequence)\n",
     "\n",
@@ -262,7 +262,7 @@
     "K_SPEED = 0.01\n",
     "\n",
     "i = 0\n",
-    "detector = SpotDetector(scale=1, k=3.0, min_area=3, device=torch.device(\"cpu\"))\n",
+    "detector = WaveletDetector(scale=1, k=3.0, min_area=3.0, device=torch.device(\"cpu\"))\n",
     "\n",
     "while True:\n",
     "    frame = video[i]\n",
@@ -281,19 +281,19 @@
     "\n",
     "    if cv2.getWindowProperty(\"Frame\", cv2.WND_PROP_VISIBLE) <1:\n",
     "        break\n",
-    "        \n",
+    "\n",
     "    if key == ord(\"w\"):\n",
     "        i = (i - 1) % len(video)\n",
     "\n",
     "    if key == ord(\"x\"):\n",
     "        i = (i + 1) % len(video)\n",
-    "        \n",
+    "\n",
     "    if key == ord(\"c\"):\n",
     "        detector.k = detector.k * (1 - K_SPEED)\n",
     "\n",
     "    if key == ord(\"v\"):\n",
     "        detector.k = detector.k * (1 + K_SPEED)\n",
-    "    \n",
+    "\n",
     "\n",
     "cv2.destroyAllWindows()"
    ]
@@ -359,16 +359,10 @@
       "Running on Linux 5.15.0-73-generic (amd64)\n",
       "Number of processors : 16\n",
       "System total memory : 32.7 GB\n",
-      "System available memory : 9.4 GB\n",
+      "System available memory : 7.4 GB\n",
       "Max java memory : 8.2 GB\n",
       "Image cache initialized (reserved memory = 3189 MB, disk cache location = '/tmp/icy_cache')\n",
       "Headless mode.\n",
-      "\n",
-      "java.lang.UnsatisfiedLinkError: /home/rreme/workspace/pasteur/icy_build/lib/unix64/vtk/libvtkRenderingCoreJava.so: libjawt.so: cannot open shared object file: No such file or directory\n",
-      "\n",
-      "Cannot load VTK library...\n",
-      "\n",
-      "Icy Version 2.4.3.0 started !\n",
       "\n"
      ]
     },
@@ -387,6 +381,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "java.lang.UnsatisfiedLinkError: /home/rreme/workspace/pasteur/icy_build/lib/unix64/vtk/libvtkRenderingCoreJava.so: libjawt.so: cannot open shared object file: No such file or directory\n",
+      "\n",
+      "Cannot load VTK library...\n",
+      "\n",
+      "Icy Version 2.4.3.0 started !\n",
+      "\n",
       "Loading workflow...\n",
       "Track extraction at frame 49\n",
       "Exiting...EHCache disposed\n",
@@ -604,8 +604,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Forward propagation: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 49/49 [00:00<00:00, 1154.91it/s]\n",
-      "Backward propagation: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 49/49 [00:00<00:00, 2047.02it/s]\n"
+      "Forward propagation: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 49/49 [00:00<00:00, 2050.68it/s]\n",
+      "Backward propagation: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 49/49 [00:00<00:00, 2217.72it/s]\n"
      ]
     },
     {
@@ -691,7 +691,7 @@
     "# Create all the steps: Detector, Linker[, Refiner]\n",
     "# Then the tracker\n",
     "\n",
-    "detector = SpotDetector(scale=1, k=3, min_area=3.0, batch_size=20, device=torch.device(\"cpu\"))\n",
+    "detector = WaveletDetector(scale=1, k=3, min_area=3.0, batch_size=20, device=torch.device(\"cpu\"))\n",
     "linker = IcyEMHTLinker(icy_path)\n",
     "\n",
     "# Optional refiner\n",
@@ -712,7 +712,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Spot Detector: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [00:00<00:00, 82.12it/s]\n"
+      "Detections (Wavelet): 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [00:00<00:00, 84.73it/s]\n"
      ]
     },
     {
@@ -726,7 +726,7 @@
       "Running on Linux 5.15.0-73-generic (amd64)\n",
       "Number of processors : 16\n",
       "System total memory : 32.7 GB\n",
-      "System available memory : 9.1 GB\n",
+      "System available memory : 7.4 GB\n",
       "Max java memory : 8.2 GB\n",
       "Image cache initialized (reserved memory = 3189 MB, disk cache location = '/tmp/icy_cache')\n",
       "Headless mode.\n",
@@ -767,8 +767,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Forward propagation: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 49/49 [00:00<00:00, 2049.47it/s]\n",
-      "Backward propagation: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 49/49 [00:00<00:00, 2211.76it/s]"
+      "Forward propagation: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 49/49 [00:00<00:00, 1988.90it/s]\n",
+      "Backward propagation: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 49/49 [00:00<00:00, 2040.09it/s]"
      ]
     },
     {
