--- a/examples/Detectors.ipynb
+++ b/examples/Detectors.ipynb
@@ -10,7 +10,7 @@
     "Review of all the detectors implemented in ByoTrack\n",
     "___________________________________________________\n",
     "\n",
-    "1. **Spot Detector** (Wavelet filtering)\n",
+    "1. **Wavelet Detector** (Wavelet decomposition + noise filtering)\n",
     "2. **StarDist** (Unet + StarConvex prior)"
    ]
   },
@@ -90,7 +90,7 @@
    "id": "ad343a87",
    "metadata": {},
    "source": [
-    "## SpotDetector"
+    "## WaveletDetector"
    ]
   },
   {
@@ -103,9 +103,9 @@
     "import numpy as np\n",
     "import torch\n",
     "\n",
-    "from byotrack.implementation.detector.spot_detector import SpotDetector\n",
+    "from byotrack.implementation.detector.wavelet import WaveletDetector\n",
     "\n",
-    "SpotDetector?"
+    "WaveletDetector?"
    ]
   },
   {
@@ -118,7 +118,7 @@
     "# Create the detector object with its hyper parameters. \n",
     "# The most important ones being the scale (size of the spots) and k the threshold noise\n",
     "\n",
-    "detector = SpotDetector(scale=1, k=3.0, min_area=3, batch_size=20, device=torch.device(\"cpu\"))"
+    "detector = WaveletDetector(scale=1, k=3.0, min_area=3, batch_size=20, device=torch.device(\"cpu\"))"
    ]
   },
   {
@@ -138,7 +138,7 @@
     "scale = 1\n",
     "\n",
     "i = 0\n",
-    "detector = SpotDetector(scale=scale, k=3.0, min_area=3, device=torch.device(\"cpu\"))\n",
+    "detector = WaveletDetector(scale=scale, k=3.0, min_area=3, device=torch.device(\"cpu\"))\n",
     "\n",
     "while True:\n",
     "    frame = video[i]\n",
