--- a/examples/ByoTrack fundamental.ipynb
+++ b/examples/ByoTrack fundamental.ipynb
@@ -113,7 +113,7 @@
    "id": "ea5f1cb4",
    "metadata": {},
    "source": [
-    "## Detections on a video: Example of SpotDetector"
+    "## Detections on a video: Example of WaveletDetector"
    ]
   },
   {
@@ -126,7 +126,7 @@
     "import numpy as np\n",
     "import torch\n",
     "\n",
-    "from byotrack.implementation.detector.spot_detector import SpotDetector"
+    "from byotrack.implementation.detector.wavelet import WaveletDetector"
    ]
   },
   {
@@ -138,7 +138,7 @@
    "source": [
     "# Create the detector object with its hyper parameters\n",
     "\n",
-    "detector = SpotDetector(scale=1, k=3.0, min_area=3, batch_size=20, device=torch.device(\"cpu\"))"
+    "detector = WaveletDetector(scale=1, k=3.0, min_area=3, batch_size=20, device=torch.device(\"cpu\"))"
    ]
   },
   {
@@ -186,7 +186,7 @@
     "i = 0\n",
     "while True:\n",
     "    mask = (detections_sequence[i].segmentation.numpy() != 0).astype(np.uint8) * 255\n",
-    "    \n",
+    "\n",
     "    # Display the resulting frame\n",
     "    cv2.imshow('Frame', mask)\n",
     "    cv2.setWindowTitle('Frame', f'Frame {i} / {len(detections_sequence)} - Number of detections: {detections_sequence[i].length}')\n",
@@ -199,7 +199,7 @@
     "\n",
     "    if cv2.getWindowProperty(\"Frame\", cv2.WND_PROP_VISIBLE) <1:\n",
     "        break\n",
-    "        \n",
+    "\n",
     "    if key == ord(\"w\"):\n",
     "        i = (i - 1) % len(detections_sequence)\n",
     "\n",
@@ -224,7 +224,7 @@
     "K_SPEED = 0.01\n",
     "\n",
     "i = 0\n",
-    "detector = SpotDetector(scale=1, k=3.0, min_area=3.0, device=torch.device(\"cpu\"))\n",
+    "detector = WaveletDetector(scale=1, k=3.0, min_area=3.0, device=torch.device(\"cpu\"))\n",
     "\n",
     "while True:\n",
     "    frame = video[i]\n",
@@ -243,19 +243,19 @@
     "\n",
     "    if cv2.getWindowProperty(\"Frame\", cv2.WND_PROP_VISIBLE) <1:\n",
     "        break\n",
-    "        \n",
+    "\n",
     "    if key == ord(\"w\"):\n",
     "        i = (i - 1) % len(video)\n",
     "\n",
     "    if key == ord(\"x\"):\n",
     "        i = (i + 1) % len(video)\n",
-    "        \n",
+    "\n",
     "    if key == ord(\"c\"):\n",
     "        detector.k = detector.k * (1 - K_SPEED)\n",
     "\n",
     "    if key == ord(\"v\"):\n",
     "        detector.k = detector.k * (1 + K_SPEED)\n",
-    "    \n",
+    "\n",
     "\n",
     "cv2.destroyAllWindows()"
    ]
@@ -527,7 +527,7 @@
     "# Create all the steps: Detector, Linker[, Refiner]\n",
     "# Then the tracker\n",
     "\n",
-    "detector = SpotDetector(scale=1, k=3, min_area=3.0, batch_size=20, device=torch.device(\"cpu\"))\n",
+    "detector = WaveletDetector(scale=1, k=3, min_area=3.0, batch_size=20, device=torch.device(\"cpu\"))\n",
     "linker = IcyEMHTLinker(icy_path)\n",
     "\n",
     "# Optional refiner\n",
